--- a/CalvaryOpebBibleWebsite/Views/Home/About.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="jumbotron" style="width:90%; margin-left:5% ;">
+<div class="jumbotron" style="width:90%; margin-left:5%">
     @{
         ViewBag.Title = "About";
     }
@@ -10,8 +10,9 @@
         Take a quick look at the pages below to get to know our great staff, and the beliefs or our church!
     </p>
 </div>
-<div class="ro" style="width:90%; margin-left:5%">
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+
+<div style="width:90%; margin-left:5%">
+    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
         <h2 style="text-align:center;">Core Beliefs</h2>
         <p style="text-align:center;">
             <br />
@@ -23,7 +24,7 @@
     </div>
 
 
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:31%;margin:1.5%;">
         <h2 style="text-align:center;">Church Leadership</h2>
         <p style="text-align:center;">
             <br />
@@ -34,7 +35,7 @@
         </p>
     </div>
 
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <div class=" col-md-4" style="background-color:lightgray; border-style:none;border-bottom-color:lightgray; border-radius: 25px;height:200px;width:30%;margin:1.5%;">
         <h2 style="text-align:center;">Events</h2>
         <p style="text-align:center;">
             <br />
@@ -47,4 +48,4 @@
     <table style="visibility:hidden">
         <tr><td>ghaewhwaeh</td></tr>
     </table>
-</div>
+    </div>
