--- a/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Shared/_Layout.cshtml
@@ -5,12 +5,10 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>@ViewBag.Title - Calvary Open Bible</title>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/Navbar.js" type="text/javascript"></script>
     <link href="~/Content/CustomCSS/Navbar.css" rel="stylesheet" type="text/css" />
-
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -26,9 +24,9 @@
     </script>
 </head>
 
-<body style="background-image:url(../../Content/background_clean_1680x1050.jpg); background-size:cover;padding-top:0; height:100%; width:100%;">
-    <div style=" background-image:url(../../Content/background_clean_1680x1050.jpg); background-size:cover; width: 100%"></div>
-    <div class="navbar navbar-inverse main-nav" style="align-content:center">
+<body style="background-image:url(../../Content/background_clean_1680x1050.jpg); background-size:cover; background-repeat:no-repeat;padding-top:0; height:100%">
+    <div style=" background-image:url(../../Content/background_clean_1680x1050.jpg); background-size:cover;"></div>
+    <div class="navbar navbar-inverse main-nav">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -39,7 +37,7 @@
 
             </div>
             <div id="menu" class="navbar-collapse collapse">
-                <ul id="nav" class="nav navbar-nav" >
+                <ul id="nav" class="nav navbar-nav" style="">
                     <li style="height: 83px;">@Html.ActionLink("Home", "Index", "Home")</li>
                     <li style="height: 83px;">
                         @Html.ActionLink("About", "About", "Home")
@@ -76,11 +74,11 @@
                     </li>
                     <li style="height: 83px;">@Html.ActionLink("Contact", "Index", "Contacts")</li>
                 </ul>
-                <!--@Html.Partial("_LoginPartial") -->
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-    <div style="position:absolute; padding-top: 390px; width: 100%; background:url(../../Content/background_clean_1680x1050.jpg);  background-size:cover; height:100%;">
+    <div style="position:absolute; padding-top: 390px; width: 100%; background:url(../../Content/background_clean_1680x1050.jpg);  background-size:cover;">
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
@@ -90,20 +88,20 @@
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
     </div>-->
-    <div class="container body-content main" style="background-color : transparent;width: 100%; height:100%; position:relative">
+    <div class="container body-content main" style="background-color : transparent;width: 90%; height:100%">
         @RenderBody()
-
-
+        <footer style="margin-top:10%;margin-left:85%;width:15%; color:white;">
+            <p>&copy; @DateTime.Now.Year - Calvary Open Bible</p>
+        </footer>
+        
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    <footer style="margin-top:10%;margin-left:80%;width:15%; color:white;position:absolute">
-        <p>&copy; @DateTime.Now.Year - Calvary Open Bible</p>
-    </footer>
-
-
+ 
+   
+   
 </body>
 
 
