Re did all of the mobile fixes.  Too many issues
Instead I set the site to be scalable based on the device and is
scrollable and zoomable

--- a/CalvaryOpebBibleWebsite/Views/Home/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/Index.cshtml
@@ -15,19 +15,18 @@
         We offer a variety of ways to connect if you’re new, and plenty of open ways to discuss life, if you’re searching for a place to call home.
     </p>
 </div>
-<div class="row" style="width:90%; margin-left:5%">
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;width:30%;float:right">
         <h2 style="text-align:center;">About Us</h2>
         <p style="text-align:center;">
             <br />
-            Learn more about Calvary and our missions!
+            Learn more about Calvary, who we are, and what we believe!
         </p>
         <p style="text-align:center;">
-            <a class="btn btn-default" href="~/Home/About">Learn more &raquo;</a>
+            <a class="btn btn-default" href="~/Home/About">About Calvary &raquo;</a>
         </p>
     </div>
 
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray;  border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <div class=" col-md-4" style=" border-style:none;background-color:lightgray;  border-radius: 25px;height:200px;margin:1.5%;position:relative;width:30%; float:right">
         <h2 style="text-align:center;">Our Leaders</h2>
         <p style="text-align:center;">
             <br />
@@ -36,11 +35,11 @@
         </p>
         <p style="text-align:center;">
 
-            <a class="btn btn-default" href="~/Pastors/Index">Learn more &raquo;</a>
+            <a class="btn btn-default" href="~/Pastors/Index">Pastors and Staff &raquo;</a>
         </p>
     </div>
 
-    <div class=" col-md-4" style="border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;max-width:500px;float:left;">
+    <div class=" col-md-4" style="border-style:none;background-color:lightgray; border-radius: 25px;height:200px;margin:1.5%;position:relative;width:30%;float:right;">
         <h2 style="text-align:center;">Our Ministries</h2>
         <p style="text-align:center;">
             <br />
@@ -50,63 +49,65 @@
 
         <p style="text-align:center;">
 
-            <a class="btn btn-default" href="~/Ministries/Index">Learn more &raquo;</a>
+            <a class="btn btn-default" href="~/Ministries/Index">Ministries &raquo;</a>
         </p>
     </div>
-</div>
-<div class="row" style="width:90%; margin-left:5%">
-    <div class=" col-md-4" style=" background-color:lightgray; max-width:500px; border-radius: 25px; position:relative; height:350px;margin:1.5%">
-        <br />
-     
-        <h2 style="text-align:center;"> Keeping In Touch<br />
-        </h2>
-            <br />
-        <p style="text-align:center;">
-            In trying to make it easy to stay in touch, we have changed our email:&nbsp; If you would like to contact any of the staff, please do so at the appropriate email below:<br>
-            </p>
-<p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Home/Contact">Learn more &raquo;</a>
-        </p>
 
-    </div>
-    <div class=" col-md-4" style=" background-color:lightgray;max-width:500px; border-radius: 25px; position:relative; height:350px;margin:1.5% ">
-        <br />
-    
-        <h2 style="text-align:center;">
-          Counseling Services:
-        </h2>
-            <br />
-        <p style="text-align:center;">
-            If you would like to talk with a counselor you may contact Anne Beem at 541.335.1149 to schedule an appointment.
-            <br>
-            <br>
-            <em >Cost is $35.00 per session.</em>
-            <br>
-            <em >You may contact Anne at :</em>
-            <em >anne@calvaryopenbible.org</em>
-            </p>
-            <br>
-            <br>
+
+   <div class=" col-md-4" style=" border-style:none;background-color:lightgray;  border-radius: 25px;height:350px;margin:1.5%;position:relative;width:30%; float:right">
+    <br />
+
+    <h2 style="text-align:center;">
+        Keeping In Touch<br />
+    </h2>
+    <br />
+    <p style="text-align:center;">
+        In trying to make it easy to stay in touch, we have changed our email:&nbsp; If you would like to contact any of the staff, please do so at the appropriate email below:<br>
+    </p>
+    <p style="text-align:center;">
+        <br /><a class="btn btn-default" href="~/Home/Contact">Contact Us &raquo;</a>
+    </p>
 
 </div>
-    <div class=" col-md-4" style=" background-color:lightgray; max-width:500px; border-radius: 25px; position:relative; height:350px; margin:1.5%; align-content:center">
-        <br />
+   <div class=" col-md-4" style=" border-style:none;background-color:lightgray;  border-radius: 25px;height:350px;margin:1.5%;position:relative;width:30%; float:right">
+    <br />
 
-        <h4>Calvary Open Bible Church</h4>
-        <h5>1116 Centennial Blvd</h5>
-        <h5>
-            Springfield,
-            OR&nbsp;&nbsp;
-            97477
-        </h5>
-        <h5><em>t.&nbsp;</em>Pho:  541-747-7125</h5>
-        <h5><em>f.&nbsp;</em>Fax:  541-747-1492</h5>
-        <h5>mailbox@calvaryopenbible.org</h5>
+    <h2 style="text-align:center;">
+        Counseling Services:
+    </h2>
+    <br />
+    <p style="text-align:center;">
+        If you would like to talk with a counselor you may contact Anne Beem at 541.335.1149 to schedule an appointment.
+        <br>
+        <br>
+        <em>Cost is $35.00 per session.</em>
+        <br>
+        <em>You may contact Anne at :</em>
+        <em>anne@calvaryopenbible.org</em>
+    </p>
+    <br>
+    <br>
 
-        <a href="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1116+Centennial+Blvd,+Springfield,+OR+97477&amp;z=16" target="_blank" class="image">
-            <div style="border:1px solid #717171; width:100px; height:100px;" class="space_before">
-                <img src="http://maps.google.com/maps/api/staticmap?center=1116+Centennial+Blvd,Springfield,OR&amp;zoom=11&amp;size=278x150&amp;markers=color:blue|1116+Centennial+Blvd,Springfield,OR&amp;maptype=roadmap&amp;sensor=false" border="0">
-            </div>
-        </a>
-    </div>
-    </div>
+</div>
+   <div class=" col-md-4" style=" border-style:none;background-color:lightgray;  border-radius: 25px;height:350px;margin:1.5%;position:relative;width:30%; float:right">
+    <br />
+
+    <h4>Calvary Open Bible Church</h4>
+    <h5>1116 Centennial Blvd</h5>
+    <h5>
+        Springfield,
+        OR&nbsp;&nbsp;
+        97477
+    </h5>
+    <h5><em>t.&nbsp;</em>Pho:  541-747-7125</h5>
+    <h5><em>f.&nbsp;</em>Fax:  541-747-1492</h5>
+    <h5>mailbox@calvaryopenbible.org</h5>
+       <div>
+    <a href="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1116+Centennial+Blvd,+Springfield,+OR+97477&amp;z=16" target="_blank" class="image">
+        <div style="border:1px solid #717171; width:75px; height:100px;" class="space_before">
+            <img src="http://maps.google.com/maps/api/staticmap?center=1116+Centennial+Blvd,Springfield,OR&amp;zoom=11&amp;size=278x150&amp;markers=color:blue|1116+Centennial+Blvd,Springfield,OR&amp;maptype=roadmap&amp;sensor=false" border="0">
+        </div>
+    </a>
+
+</div>
+   
