--- a/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Home/Media.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Media";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron" style="width:90%; margin-left:5% " >
+<div class="jumbotron" style="width:100%;" >
     <h1 style="text-align:center;">Media</h1>
 
     <p class="lead" style="width:auto; text-align:center">
@@ -11,9 +11,10 @@
         Click the links below to view our Sunday Service live stream, our church event photos, and a variety of videos!
     </p>
 </div>
-<div style="width:90%; margin-left:5%"><div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
+<div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:250px;margin:1.5%;position:relative;width:30%;float:right">
     <h2 style="text-align:center;">Photos</h2>
     <p style="text-align:center;">
+        <br />
         <br />
         Check out photos of our congregation at church, and at our various community events!
     </p>
@@ -22,28 +23,28 @@
     </p>
 </div>
 
+<div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:250px;margin:1.5%;position:relative;width:30%;float:right">
+    <h2 style="text-align:center;">Live Stream Video</h2>
+    <p style="text-align:center;">
+        <br />
+        Watch a live stream of our Sunday Services every Sunday at 8:30 and 10:30 Am, or check out previous service recorded services!
+    </p>
+    <p style="text-align:center;">
+        <br /><a class="btn btn-default" href="~/Images/LiveStream">Live Stream &raquo;</a>
+    </p>
+</div>
 
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
-        <h2 style="text-align:center;">Live Stream Video</h2>
-        <p style="text-align:center;">
-            <br />
-            Watch a live stream of our Sunday Services every Sunday at 8:30 and 10:30 Am, or check out previous service recorded services!
-        </p>
-        <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Images/LiveStream">Live Stream &raquo;</a>
-        </p>
-    </div>
-
-    <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:275px;margin:1.5%;position:relative;max-width:500px;float:left;">
-        <h2 style="text-align:center;">Calvary Videos</h2>
-        <p style="text-align:center;">
-            <br />
-            Watch videos from various Church Events, Worship Services, and Sunday Morning videos!
-        </p>
-        <p style="text-align:center;">
-            <br /><a class="btn btn-default" href="~/Images/Videos">Recorded Video &raquo;</a>
-        </p>
-    </div>
+   <div class=" col-md-4" style=" border-style:none;background-color:lightgray; border-radius: 25px;height:250px;margin:1.5%;position:relative;width:30%;float:right">
+    <h2 style="text-align:center;">Calvary Videos</h2>
+    <p style="text-align:center;">
+        <br />
+        <br />
+        Watch videos from various Church Events, Worship Services, and Sunday Morning videos!
+    </p>
+    <p style="text-align:center;">
+        <br /><a class="btn btn-default" href="~/Images/Videos">Recorded Video &raquo;</a>
+    </p>
+</div>
 
     <table style="visibility:hidden">
         <tr><td>ghaewhwaeh</td></tr>
