--- a/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Pastors/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Pastors";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron" style=" overflow:scroll">
+<div class="jumbotron">
     <h2 style="text-align:center;">Pastors</h2>
     <br />
     @using (Html.BeginForm("Index", "Pastors", FormMethod.Get))
