--- a/CalvaryOpebBibleWebsite/Views/Beliefs/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Beliefs/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Beliefs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="jumbotron" style="width:90%; margin-left:5%; overflow:scroll ">
+<div class="jumbotron" style="width:100% ">
     <div>
         <h2 style="text-align:center;">Beliefs</h2>
         <br />
