--- a/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
@@ -6,14 +6,15 @@
 }
 <div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
-    <a href="~/Ministries/Index" style="color:black;margin-left:2%;font-size:18px;">Ministries Home</a>
-    <a href="~/Ministries/Adults" style="color:black;margin-left:5%;font-size:18px;">Adults</a>
-    <a href="~/Ministries/Children" style="color:black;margin-left:5%;font-size:18px;">Children</a>
-    <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:5%;font-size:18px;">Middle School</a>
-    <a href="~/Ministries/HighSchool" style="color:black;margin-left:5%;font-size:18px;">High School</a>
-    <a href="~/Ministries/College" style="color:black;margin-left:5%;font-size:18px;">College</a>
-    <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:5%;font-size:18px;">Community Groups</a>
-    <a href="~/Ministries/Seniors" style="color:black;margin-left:5%;font-size:18px;">Sunday Church</a>
+   
+    <a href="~/Ministries/Adults" style="color:black;margin-left:10%;font-size:16px;">Adults</a>
+    <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
+    <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:4%;font-size:16px;">Middle School</a>
+    <a href="~/Ministries/HighSchool" style="color:black;margin-left:4%;font-size:16px;">High School</a>
+    <a href="~/Ministries/College" style="color:black;margin-left:4%;font-size:16px;">College</a>
+    <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:4%;font-size:16px;">Community Groups</a>
+    <a href="~/Ministries/Seniors" style="color:black;margin-left:4%;font-size:16px;">Seniors</a>
+    
     <br />
     <br />
 </div>
@@ -149,8 +150,5 @@
         </table>
 
     </div>
-    <table style="visibility:hidden">
-        <tr><td>ghaewhwaeh</td></tr>
-    </table>
-
+    <a href="~/Ministries/Index" style="color:black;margin-left:2%;font-size:18px;">Ministries Home</a>
 </div>
