Ministry Pages update and photo fix

--- a/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Children.cshtml
@@ -6,6 +6,9 @@
 }
 <div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
+    <h2 style="text-align:center;">Children</h2>
+    <br />
+    <br />
 
     <a href="~/Ministries/Adults" style="color:black;margin-left:10%;font-size:16px;">Adults</a>
     <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
