--- a/CalvaryOpebBibleWebsite/Views/Ministries/CommunityGroups.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/CommunityGroups.cshtml
@@ -6,7 +6,9 @@
 }
 <div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
 
-
+    <h2 style="text-align:center;">Community Groups</h2>
+    <br />
+    <br />
     <a href="~/Ministries/Adults" style="color:black;margin-left:10%;font-size:16px;">Adults</a>
     <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
     <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:4%;font-size:16px;">Middle School</a>
