--- a/CalvaryOpebBibleWebsite/Views/Ministries/Index.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Index.cshtml
@@ -6,7 +6,9 @@
 }
 
 <div class="jumbotron" style="max-width:2200px;min-width:300px; overflow:auto  ">
-
+    <h2 style="text-align:center;">Ministries</h2>
+    <br />
+    <br />
     <a href="~/Ministries/Adults" style="color:black;margin-left:10%;font-size:16px;">Adults</a>
     <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
     <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:4%;font-size:16px;">Middle School</a>
@@ -63,6 +65,9 @@
                                     break;
                                 case "College":
                                 @Html.ActionLink(item.MinistriesType, item.MinistriesType, "Ministries")
+                                    break;
+                                case "Community Groups":
+                                @Html.ActionLink(item.MinistriesType, "CommunityGroups", "Ministries")
                                     break;
                                 case "Middle School":
                                 @Html.ActionLink(item.MinistriesType, "MiddleSchool", "Ministries")
