--- a/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
+++ b/CalvaryOpebBibleWebsite/Views/Ministries/Seniors.cshtml
@@ -9,14 +9,15 @@
     <br />
     <br />
    
-    <a href="~/Ministries/Adults" style="color:black;margin-left:10%;font-size:16px;">Adults</a>
-    <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
-    <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:4%;font-size:16px;">Middle School</a>
-    <a href="~/Ministries/HighSchool" style="color:black;margin-left:4%;font-size:16px;">High School</a>
-    <a href="~/Ministries/College" style="color:black;margin-left:4%;font-size:16px;">College</a>
-    <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:4%;font-size:16px;">Community Groups</a>
-    <a href="~/Ministries/Seniors" style="color:black;margin-left:4%;font-size:16px;">Seniors</a>
-    
+    <div style="text-align:center">
+        <a href="~/Ministries/Adults" style="color:black;font-size:16px;">Adults</a>
+        <a href="~/Ministries/Children" style="color:black;margin-left:4%;font-size:16px;">Children</a>
+        <a href="~/Ministries/MiddleSchool" style="color:black;margin-left:4%;font-size:16px;">Middle School</a>
+        <a href="~/Ministries/HighSchool" style="color:black;margin-left:4%;font-size:16px;">High School</a>
+        <a href="~/Ministries/College" style="color:black;margin-left:4%;font-size:16px;">College</a>
+        <a href="~/Ministries/CommunityGroups" style="color:black;margin-left:4%;font-size:16px;">Community Groups</a>
+        <a href="~/Ministries/Seniors" style="color:black;margin-left:4%;font-size:16px;">Seniors</a>
+    </div>
     <br />
     <br />
 </div>
