Minor calendar changes
Added light background on events listed in calendar.  Could not find an
easy way to get rid of the angular border.  Did not want to break things
the day before the presentation.

--- a/CalvaryOpebBibleWebsite/Content/CustomCSS/CalendarStyles.css
+++ b/CalvaryOpebBibleWebsite/Content/CustomCSS/CalendarStyles.css
@@ -1,13 +1,14 @@
-﻿
-
-table {
+﻿table {
     margin: 0 auto 0 auto;
+    border: 2px solid black;
+    border-radius: 50px;
 }
 
 th, tr, td {
     border-style: solid;
     border-collapse: collapse;
     border-width: 2px;
+    border-radius: 50px;
 }
 
 td {
